--- a/index.html
+++ b/index.html
@@ -1,53 +1,57 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>More About Me</title>
+    <meta charset="UTF-8">
+    <title>About Me - Taeyun Kim</title>
   </head>
   <body>
-    <h1>More About Me</h1>
-    <p>This page says a bit more about me.</p>
-    
-  <h2>Hobbies</h2>
-    <p>When I am not studying, I like to play soccer, read historical fiction, and play the ukulele.</p>
 
-  <p>These are my <strong>favorite</strong> soccer teams:
-   <ul>
-    <li>Seattle Sounders SC</li>
-    <li>Seattle Reign</li>
-    <li>UW Huskies</li>
-    <li>Gustavus Gusties</li>
-    <li>LVR Dragon Slayers</li>
-   </ul>
-  </p> 
-  <p>I also love making things with <a href="https://www.arduino.cc" alt="Picture of Arduino hardware.">Arduino</a>.</p>
+    <h1>About Me</h1>
+    <p>Hello! My name is Taeyun Kim.</p>
+    <p>This page says a little about me.</p>
 
-    <img src="arduino.jpg">
+    <hr>
 
-<h2>Music</h2>
-  <p>I am not that good at making music, but I like to <i>listen</i> to music. This table lists some of my favorite albums:
-    <table>
-      <tr>
-        <th>Album</th>
-        <th>Band</th>
-      </tr>
-      <tr>
-        <td>OK Computer</td>
-        <td>Radiohead</td>
-      </tr>
-      <tr>
-        <td>either/or  </td>
-        <td>Elliott Smith</td>
-      </tr>
-      <tr>
-        <td>Late Developers</td>
-        <td>Belle and Sebastian</td>
-      </tr>
-      <tr>
-        <td>The Sophtware Slump</td>
-        <td>Grandaddy</td>
-      </tr>
+    <h2>Academics</h2>
+    <p>I'm a <b>Statistics - Data Science</b> major at the University of Washington.</p>
+    <p>I'm currently enrolled in <b>ENGL396: Software Documentation</b>.</p>
+    <p>When I graduate, I plan to do a master's degree in <i>Statistics</i> or <i>Biostatistics</i>.</p>
+
+    <h2>Programming Background</h2>
+    <p>I am relatively new to programming. The following table summarizes my experience with different programming languages:</p>
+
+    <table border="1">
+      <thead>
+        <tr>
+          <th>Language</th>
+          <th>Experience</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Python</td>
+          <td>Proficient</td>
+        </tr>
+        <tr>
+          <td>R</td>
+          <td>Proficient; Used extensively for statistical coding</td>
+        </tr>
+        <tr>
+          <td>HTML</td>
+          <td>Authored RSO Website</td>
+        </tr>
+        <tr>
+          <td>SQL</td>
+          <td>Minimal</td>
+        </tr>
+      </tbody>
     </table>
-    
+
+    <h2>Future Goals</h2>
+    <p>I hope to apply my background in data science to solve complex problems in the healthcare industry.</p> 
+    <p>I am particularly interested in using statistical modeling to analyze biological data.</p>
+
+    <hr>
+
   </body>
 </html>
-  
