Add width attribute to husky image

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>About Me</h1>
     <p>Hello! My name is Taeyun Kim.</p>
     <p>This page says a little about me.</p>
-    <img src="husky.png" alt="Husky">
+    <img src="husky.png" alt="Husky" width="30%">
 
     <hr>
 
